              2004-2006 Robert Sowada <sowadart@gmx.de>.
See the end for copying conditions.
Please send gnubiff bug reports to gnubiff-bugs@lists.sourceforge.net

Version 2.2.2
 * Robert Sowada
   - Changed version to 2.2.2
   - Bugfix: Obtaining the panel's size (GNOME)
   - Updated Hungarian translation (thanks to Wallner Adam)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
	
Version 2.2.1		2006-05-14 20:08
 * Robert Sowada
   - Changed version to 2.2.1
   - Bugfix: Version check of gtk in configure.ac (thanks to Andy Schofield for
        reporting this bug)
   - Added Andy Schofield to contributors
   - Bugfix: False GPL version in "doc/gnubiff.texi"
   - Added GPL (version 2) as ASCII text file to the gnubiff directory
   - Cleanup: All FAM functions in "src/local.cc" now have the prefix "fam_"
   - Cleanup: It should be possible now to compile the code without FAM support
   - Feature: Configuring gnubiff without support for FAM (feature request
        #1461632 by Kyle McDonald and others)
   - Updated Vietnamese translation (thanks to Clytie Siddall)
   - Feature: New option "startup_preferences"
	
Version 2.2.0           2006-04-09 17:44
 * Robert Sowada
   - Changed version to 2.2.0 (from version 2.1.5)
   - Removed not needed include files from "src/gnubiff.cc"
   - Added files from libegg for later systray support
   - Updated TODO
   - Cleanup of applet code
   - Bugfix: gnome version of gnubiff can now be installed to any directory
   - Added Jakub Raczkowski to contributors
   - Workaround: Added a parameter to the create function to work around the
        problem of setting an incorrect callback data pointer for the gtk
        applet
   - Bugfix: Text in gtk applet now always fits into the fixed container
   - Bugfix: Gnome applet now identical to gtk applet.
   - Feature: It's now possible to print the number of new messages without
        zero padding (via "%D")
   - Added Maik Wachsmuth and Satou Kazuhito to contributors